Height of product detail photo has been fixed. Added blurred background.

--- a/src/sections/products/ProductDetail.module.sass
+++ b/src/sections/products/ProductDetail.module.sass
@@ -5,9 +5,30 @@
 
   &__cover
     width: 300px
+    height: 300px
     border-radius: 16px
     overflow: hidden
     border: 1px solid rgba(#fff,.2)
+    position: relative
+    &__image
+      z-index: 1
+      position: absolute
+      left: 0
+      top: 0
+      width: 100%
+      height: 100%
+      object-fit: contain
+    &__bg
+      transform: scale(1.5)
+      filter: blur(10px)
+      opacity: .5
+      z-index: 0
+      position: absolute
+      left: 0
+      top: 0
+      width: 100%
+      height: 100%
+      object-fit: contain
 
   &__details
     flex: 1
